App Running- need to change password requirements - added logs in UserController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-aws.dynamodb.endpoint = https://dynamodb.us-west-2.amazonaws.com
-aws.dynamodb.accessKey = <Your Access Key>
-aws.dynamodb.secretKey = <Your Secret Key>
+spring.profiles.active=dev
