edited profile configuration

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
 aws.dynamodb.endpoint = https://dynamodb.us-west-2.amazonaws.com
 aws.dynamodb.accessKey = AKIAZMVS357OAVWQYC5C
 aws.dynamodb.secretKey = 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
+server.port=8080
